--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -1,24 +1,58 @@
-server {
-    listen              80 default_server;
-    listen              [::]:80 default_server;
-    server_name         localhost;
-    index               index.php index.html index.js;
-    error_log           /var/log/nginx/error.log;
-    access_log          /var/log/nginx/access.log;
-    root                /public;
-    client_max_body_size 64M;
+#user  nobody;
+worker_processes  1;
 
-    location / {
-        try_files       $uri $uri/ /index.php?query_string;
-    }
+#error_log  logs/error.log;
+#error_log  logs/error.log  notice;
+#error_log  logs/error.log  info;
 
-    location ~ \.php$ {
-       try_files        $uri $rui/ /index.php =404;
-       fastcgi_split_path_info ^(.+\.php)(/.+)$;
-       fastcgi_pass     php:9000;
-       fastcgi_index    index.php;
-       include          fastcgi_params;
-       fastcgi_param    SCRIPT_FILENAME $document_root$fastcgi_script_name;
-       fastcgi_param    PATH_INFO $fastcgi_path_info;
+#pid        logs/nginx.pid;
+
+
+events {
+    worker_connections  1024;
+}
+
+
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    #                  '$status $body_bytes_sent "$http_referer" '
+    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+
+    #access_log  logs/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    #keepalive_timeout  0;
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    server {
+        listen              80 default_server;
+        listen              [::]:80 default_server;
+        server_name         localhost;
+        index               index.php index.html;
+        error_log           /var/log/nginx/error.log;
+        access_log          /var/log/nginx/access.log;
+        root                /public;
+        client_max_body_size 64M;
+
+        location / {
+            try_files       $uri $uri/ /index.php?query_string;
+        }
+
+        location ~ \.php$ {
+           try_files        $uri $uri/ /index.php =404;
+           fastcgi_split_path_info ^(.+\.php)(/.+)$;
+           fastcgi_pass     php:9000;
+           fastcgi_index    index.php;
+           include          fastcgi_params;
+           fastcgi_param    SCRIPT_FILENAME $document_root$fastcgi_script_name;
+           fastcgi_param    PATH_INFO $fastcgi_path_info;
+        }
     }
 }
