--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -38,7 +38,7 @@ http {
         index               index.php index.html;
         error_log           /var/log/nginx/error.log;
         access_log          /var/log/nginx/access.log;
-        root                /public;
+        root                /var/www/html;
         client_max_body_size 64M;
 
         location / {
