[DEV] first step with API bis

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,8 +10,8 @@
     },
     "authors": [
         {
-            "name": "BruForm",
-            "email": "bpayet.gsm@free.fr"
+            "name": "Niwee",
+            "email": "niwee@gmail.com"
         }
     ],
     "require": {
