[DEV] API GET and POST for all table in one

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,8 +29,9 @@ services:
         [
           "CMD",
           "mysql",
-          "-u'${MARIADB_USER}'",
-          "-p'${MARIADB_PASSWORD}'",
+          "-u",
+          "${MYSQL_USER}",
+          "-p${MYSQL_PASSWORD}",
           "-e",
           "SELECT 1",
         ]
