--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -35,21 +35,21 @@ http {
         listen              80 default_server;
         listen              [::]:80 default_server;
         server_name         localhost;
-        index               index.php index.html;
+        index               Index.php index.html;
         error_log           /var/log/nginx/error.log;
         access_log          /var/log/nginx/access.log;
         root                /var/www/html;
         client_max_body_size 64M;
 
         location / {
-            try_files       $uri $uri/ /index.php?query_string;
+            try_files       $uri $uri/ /Index.php?query_string;
         }
 
         location ~ \.php$ {
-           try_files        $uri $uri/ /index.php =404;
+           try_files        $uri $uri/ /Index.php =404;
            fastcgi_split_path_info ^(.+\.php)(/.+)$;
            fastcgi_pass     php:9000;
-           fastcgi_index    index.php;
+           fastcgi_index    Index.php;
            include          fastcgi_params;
            fastcgi_param    SCRIPT_FILENAME $document_root$fastcgi_script_name;
            fastcgi_param    PATH_INFO $fastcgi_path_info;
