--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "glightbox": "^3.2.0",
     "moment": "^2.29.4",
